Tidied up Gradle